updating documentation, slight cosmetic improvements and changing name of application.property